--- a/index.html
+++ b/index.html
@@ -1,73 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Flipkart FBF Allocation and Stock Analysis</title>
-  <link rel="stylesheet" href="styles.css" />
-  <!-- PapaParse CDN -->
-  <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
-</head>
-<body>
-  <header class="site-header">
-    <div class="header-left">
-      <img src="assets/logo.png" alt="Rajnandini Fashion India Limited logo" class="logo" />
-      <div class="title-block">
-        <div class="main-title">Flipkart FBF Allocation and Stock Analysis</div>
-        <div class="brand-line">Rajnandini Fashion India Limited.</div>
-      </div>
-    </div>
-    <div class="header-right">
-      <div class="version">v1.0</div>
-    </div>
-  </header>
-
-  <div class="container">
-    <p class="lead">Upload Flipkart Sales CSV and FBF Stock CSV. Processing runs in your browser — no server needed.</p>
-
-    <div class="uploader compact">
-      <label class="file-label">Flipkart Sales CSV<input id="salesFile" type="file" accept=".csv" /></label>
-      <label class="file-label">FBF Stock CSV<input id="stockFile" type="file" accept=".csv" /></label>
-      <div class="actions">
-        <button id="processBtn">Process Files</button>
-        <button id="resetBtn" class="muted">Reset</button>
-      </div>
-      <div id="status" class="status"></div>
-    </div>
-
-    <div id="summaryCards" class="cards hidden"></div>
-
-    <div id="controls" class="controls hidden">
-      <div class="filter-row">
-        <label class="filter-label">Warehouse:</label>
-        <select id="warehouseFilter" multiple size="4" class="warehouse-select"></select>
-        <button id="clearWarehouse" class="muted small">Clear</button>
-      </div>
-    </div>
-
-    <div id="results" class="hidden">
-      <div class="tabs">
-        <button class="tab active" data-tab="summary">Stock Cover (SKU)</button>
-        <button class="tab" data-tab="warehouse">Warehouse Level</button>
-        <button class="tab" data-tab="refill">Refill Recommendations</button>
-        <button class="tab" data-tab="excess">Excess (>60d)</button>
-      </div>
-
-      <div id="tableContainer"></div>
-
-      <div class="downloads">
-        <button id="downloadSummary">Download stock_cover_summary.csv</button>
-        <button id="downloadWarehouse">Download warehouse_level_stock.csv</button>
-        <button id="downloadRefill">Download refill_recommendations.csv</button>
-        <button id="downloadExcess">Download excess_stock_over_60d.csv</button>
-      </div>
-    </div>
-
-    <footer>
-      <p>© Rajnandini Fashion India Limited.</p>
-    </footer>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8" /><meta name="viewport" content="width=device-width,initial-scale=1" /><title>Flipkart FBF Allocation and Stock Analysis — Rajnandini</title><link rel="stylesheet" href="styles.css" /><script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script></head><body><header class="site-header"><div class="header-left"><img src="assets/logo.png" alt="Rajnandini logo" class="logo"/><div class="title-block"><div class="main-title">Flipkart FBF Allocation and Stock Analysis</div><div class="brand-line">Rajnandini Fashion India Limited.</div></div></div><div class="header-right">v1.0</div></header><main class="container"><p class="lead">Upload Flipkart Sales CSV, FBF Stock CSV, Seller Stock CSV and optional Mapping CSV. Date format expected: <strong>DD-MM-YYYY</strong>.</p><div class="uploader"><label>Flipkart Sales CSV<input id="salesFile" type="file" accept=".csv" /></label><label>FBF Stock CSV<input id="stockFile" type="file" accept=".csv" /></label><label>Seller Stock CSV<input id="sellerFile" type="file" accept=".csv" /></label><label>Mapping CSV (optional)<input id="mappingFile" type="file" accept=".csv" /></label><div class="actions"><button id="processBtn">Process Files</button><button id="resetBtn" class="muted">Reset</button><label class="small">Seller buffer threshold: <input id="threshold" type="number" value="5" min="0" style="width:60px"/></label></div><div id="status" class="status"></div></div><div id="templates" class="templates"><button id="downloadTemplates">Download CSV Templates</button></div><div id="summaryCards" class="cards hidden"></div><div id="controls" class="controls hidden"><label>Warehouse filter:</label><select id="warehouseFilter" multiple size="4"></select><button id="clearWarehouse" class="muted small">Clear</button></div><section id="results" class="hidden"><div class="tabs" role="tablist"><button class="tab active" data-tab="summary">Stock Cover (SKU)</button><button class="tab" data-tab="warehouse">Warehouse Level</button><button class="tab" data-tab="refill">Refill Recommendations</button><button class="tab" data-tab="excess">Excess (&gt;60d)</button></div><div id="tableContainer"></div><div class="downloads"><button id="downloadSummary">Download stock_cover_summary_45d.csv</button><button id="downloadWarehouse">Download warehouse_level_stock_45d.csv</button><button id="downloadRefill">Download refill_recommendations_45d.csv</button><button id="downloadExcess">Download excess_stock_over_60d.csv</button><button id="downloadUnmapped">Download unmapped_flipkart_skus.csv</button></div></section><footer>© Rajnandini Fashion India Limited.</footer></main><script src="script.js"></script></body></html>
